--- a/src/App.scss
+++ b/src/App.scss
@@ -12,15 +12,19 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  scroll-padding: 8em;
 }
 
 body {
   background-color: var(--black-brand);
   color: var(--white-brand);
-font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1.2rem;
   line-height: 1.5;
+}
+
+::selection {
+  color: var(--black-brand);
+  background-color: var(--yellow-brand);
 }
 
 #root {
@@ -34,7 +38,7 @@ article {
   flex: 1;
 }
 
-.yellow{
+.yellow {
   color: var(--yellow-brand);
 }
 
@@ -46,17 +50,42 @@ article {
   margin: 0 1rem 0 1rem;
 }
 
-.button {
-  color: var(--white);
+// .button {
+
+// }
+
+.link-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.6rem;
+  font-weight: 400;
+    color: var(--white);
   text-align: center;
-  background-color: transparent;
-  font-size: 1.2rem;
-  font-weight: 600;
+  // background-color: transparent;
   text-decoration: none;
   cursor: pointer;
 }
+
 .rounded {
   border-radius: 100px;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+
+body::-webkit-scrollbar {
+  width: 1rem;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #fffd63;
+  border: 2px solid #18151c;
+}
+body::-webkit-scrollbar-track {
+  background-color: #101016;
+  opacity: 0.1;
 }
 
 @media (min-width: 576px) {
