--- a/src/__colors.css
+++ b/src/__colors.css
@@ -1,17 +1,18 @@
 :root {
-    --black-brand: #121316;
-    --white-brand: #f0f0f0;
-    --slate-grey: #757575;
-    --yellow-brand: #fff250;
-    --white: white;
-    --bg-white: #ededed;
-    --black-2: #191a1d;
-    --dark-blue: #0d111d;
-    --spring-green: #63ff92;
-    --light-bg: #f1f1f1;
-    --black-1--2: #232531;
-    --hot-pink: #ff639f;
-    --olive: #908f31;
-    --cornflower-blue: #6385ff;
-    --stroke-offset: 200px;
+  --black-brand: #121316;
+  --white-brand: #f0f0f0;
+  --slate-grey: #757575;
+  --yellow-brand: #fff250;
+  --yellow-brand-opacity: rgb(255, 242, 80, 0.4);
+  --white: white;
+  --bg-white: #ededed;
+  --black-2: #191a1d;
+  --dark-blue: #0d111d;
+  --spring-green: #63ff92;
+  --light-bg: #f1f1f1;
+  --black-1--2: #232531;
+  --hot-pink: #ff639f;
+  --olive: #908f31;
+  --cornflower-blue: #6385ff;
+  --stroke-offset: 200px;
 }
