--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -1,7 +1,7 @@
 @use '../../__colors.css';
 
 header {
-  margin-top: 160px;
+  margin-top: 150px;
   .hero {
     display: flex;
     flex-direction: column;
@@ -24,13 +24,56 @@ header {
       letter-spacing: -2px;
       font-weight: 400;
       line-height: 1.2;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     .small-text {
       text-wrap: balance;
       // max-width: 36rem;
       text-align: center;
       color: var(--slate-grey);
+      margin-bottom: 30px;
+    }
+    .button-wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      // max-width: 320px;
+      // margin-bottom: 2rem;
+    }
+    .users-wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+     
+    }
+    .users-img {
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 1rem;
+      // justify-content: center;
+      // align-items: center;
+      img {
+        width: 28px;
+        height: 28px;
+        border-radius: 100%;
+        margin-left: -6px;
+      }
+      .img-no-margin {
+        margin-left: 0;
+      }
+    }
+    .text-users{
+      margin: 0 auto;
+      max-width: 15rem;
+       p{
+      display: block;
+        font-size: 1rem;
+        text-align: center;
+      }
     }
   }
 }
