--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -2,8 +2,12 @@
 
 .bgc-img {
   position: absolute;
+  top: 0;
+  background-image: url('https://cdn.prod.website-files.com/64ab4ca244ef5156093937b6/65f2d866372c85372dbbb507_BGG.svg');
+  height: 100vh;
+  width: 100vw;
   background-position: 100% 0;
-  background-size: auto;
+  // background-size: contain;
   background-repeat: no-repeat;
   overflow-x: clip;
   z-index: -1;
@@ -14,6 +18,7 @@
     height: 5rem;
     box-shadow: 25px 28px 100px 50px var(--yellow-brand);
     opacity: 0.1;
+    overflow-x: clip;
   }
 }
 nav {
@@ -36,7 +41,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap:1rem;
+    gap: 1rem;
     border-radius: 100px;
     .signin {
       padding: 0.5rem 1rem;
@@ -55,5 +60,11 @@ nav {
       font-family: Instrumentsans Medium, sans-serif;
       transition: all 0.4s;
     }
+  }
+}
+
+@media (min-width:678px){
+  .bgc-img{
+    background-size: contain;
   }
 }
