--- a/src/components/hero/animationsExamples/Animation5.module.scss
+++ b/src/components/hero/animationsExamples/Animation5.module.scss
@@ -1,1 +1,107 @@
 @use '../../../__colors.css';
+
+.first {
+  display: flex;
+  flex-direction: row;
+  padding: 1.6rem 1.6rem;
+  border-radius: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  overflow: hidden;
+  .arrow,
+  .apple-logo {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.8rem;
+    transition: transform 0.4s;
+  }
+  .arrow {
+    transform: translateX(4rem);
+  }
+  .apple-logo,
+  .text {
+    transform: translateX(1.2rem);
+  }
+  .text {
+    display: block;
+    margin: 0 1.4rem;
+    transition: transform 0.4s;
+  }
+}
+
+.first:hover {
+  .apple-logo {
+    transform: translateX(-4rem);
+  }
+  .text,
+  .arrow {
+    transform: translateX(-1.2rem);
+  }
+}
+
+.second {
+  background-color: var(--hot-pink);
+  padding: 1rem 2rem 1rem 1rem;
+  .animation-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    width: 2.6rem;
+    height: 2.6rem;
+    margin-right: 0.5rem;
+    background-color: var(--black-brand);
+    overflow: hidden;
+    transform: scale(0.7);
+    transition: transform 0.2s 0.2s;
+  }
+  //   .circle {
+  //     border-radius: 100%;
+  //     width: 2rem;
+  //     height: 2rem;
+  //     margin-right: 1rem;
+  //     background-color: var(--black-brand);
+  //   }
+  .chevron {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 0.7rem;
+    max-width: 0.7rem;
+    transform: translateX(-3rem);
+    transition: 0.3s;
+  }
+}
+
+.second:hover {
+  .animation-wrapper {
+    transform: scale(1);
+    transition: 0.2s;
+  }
+  .chevron {
+    transform: translateX(0);
+    transition: transform 0.3s 0.2s;
+  }
+}
+
+.third{
+    padding: 1rem;
+    background-color: var(--yellow-brand);
+    color: var(--black-brand);
+
+    .arrows-wrapper{
+        // width: 2rem;
+        transform: rotate(-45deg);
+    }
+    .top,.bottom{
+        // position: absolute;
+        width: 2rem;
+    }
+    .top{
+        position: relative;
+    }
+    .bottom{
+        position: absolute;
+    }
+}
