finished hero section

--- a/src/components/hero/animationsExamples/Animation3.module.scss
+++ b/src/components/hero/animationsExamples/Animation3.module.scss
@@ -28,9 +28,6 @@
   }
 }
 
-.first {
-  color: var(--black);
-}
 
 .second {
   position: relative;
@@ -123,7 +120,7 @@
 
 .fourth:hover {
   .arrow-circle {
-    transform: rotate(-45deg);
+    // transform: rotate(-45deg);
     color: var(--black-brand);
   }
   .arrow-cricle-inner {
