--- a/src/App.scss
+++ b/src/App.scss
@@ -20,18 +20,14 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.2rem;
   line-height: 1.5;
+  min-height: 200vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 ::selection {
   color: var(--black-brand);
   background-color: var(--yellow-brand);
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  min-height: 100vh;
 }
 
 article {
@@ -44,15 +40,19 @@ article {
 
 .container {
   width: 100%;
+  padding: 0 1rem 0 1rem;
+  margin: 0 auto;
 }
 
-.wrapper {
-  margin: 0 1rem 0 1rem;
+.section-title {
+  font-size: 3rem;
+  font-weight: 500;
+  letter-spacing: -1px;
+  text-align: center;
+  line-height: 130%;
+  max-width: 77rem;
+  margin: 0 auto 3rem auto;
 }
-
-// .button {
-
-// }
 
 .link-button {
   display: flex;
@@ -61,9 +61,8 @@ article {
   justify-content: center;
   font-size: 1.6rem;
   font-weight: 400;
-    color: var(--white);
+  color: var(--white);
   text-align: center;
-  // background-color: transparent;
   text-decoration: none;
   cursor: pointer;
 }
@@ -76,7 +75,7 @@ article {
 }
 
 body::-webkit-scrollbar {
-  width: 1rem;
+  width: 10px;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -91,16 +90,26 @@ body::-webkit-scrollbar-track {
 @media (min-width: 576px) {
   .container {
     width: 540px;
+    padding: 0 2rem 0 2rem;
+  }
+  .section-title {
+    font-size: 3.2rem;
   }
 }
 @media (min-width: 768px) {
   .container {
     width: 720px;
   }
+  .section-title {
+    font-size: 3.6rem;
+  }
 }
 @media (min-width: 992px) {
   .container {
     width: 960px;
+  }
+  .section-title {
+    font-size: 4.4rem;
   }
 }
 @media (min-width: 1200px) {
