--- a/src/components/UI/Card.module.scss
+++ b/src/components/UI/Card.module.scss
@@ -7,23 +7,23 @@
   justify-content: center;
   align-items: center;
   min-width: 32rem;
-  padding: 3rem;
-  border-radius: 2rem;
-overflow: visible;
-gap: 2rem;
+  padding: 30px;
+  border-radius: 20px;
+  overflow: visible;
+  gap: 20px;
 }
 
 .colection {
   position: absolute;
-  top: calc(-1px - 0.8rem );
-  right: 2rem;
+  top: calc(-1px - 8px);
+  right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.3rem 1rem;
+  padding: 3px 10px;
   background-color: var(--black-brand);
   border: 1px solid var(--slate-grey);
-  border-radius: 10rem;
+  border-radius: 100px;
   p {
     font-size: 1rem;
     line-height: 1rem;
