--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -2,13 +2,16 @@
 
 header {
   margin-top: 150px;
+  // width: ;
+  // overflow-x: hidden;
   .hero {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto 50px auto;
     .interactions {
       font-size: 1.2rem;
-      padding: 0.7rem 1.1rem;
+      padding: 7px 11px;
       color: var(--yellow-brand);
       background-color: var(--black-2);
       box-shadow: inset 0 2px 6px 1px rgba(255, 255, 255, 0.1);
@@ -28,7 +31,8 @@ header {
     }
     .small-text {
       text-wrap: balance;
-      // max-width: 36rem;
+      max-width: 58rem;
+      font-size: 1.2rem;
       text-align: center;
       color: var(--slate-grey);
       margin-bottom: 30px;
@@ -53,7 +57,7 @@ header {
     .users-img {
       display: flex;
       flex-direction: row;
-      margin-bottom: 1rem;
+      margin-bottom: 10px;
       // justify-content: center;
       // align-items: center;
       img {
@@ -77,3 +81,52 @@ header {
     }
   }
 }
+
+
+
+@media (min-width: 479px) {
+header{
+  .hero{
+    padding: 0 30px 50px 30px;
+    .header_title{
+      font-size: 4.8rem;
+    }
+    .small-text{
+      font-size: 1.6rem;
+    }
+  }
+}
+}
+
+// @media (min-width: 678px) {
+//   header{
+//   .hero{
+//     .header_title{
+//       font-size: 4.8rem;
+//     }
+//   }
+// }
+// }
+
+@media (min-width: 768px) {
+header{
+  .hero{
+    .header_title{
+      font-size: 7.2rem;
+    }
+    .button-wrapper{
+      flex-direction: row;
+    }
+  }
+}
+}
+
+// @media (min-width: 992px) {
+// header{
+//   .hero{
+//     .header_title{
+//       font-size: 4.8rem;
+//     }
+//   }
+// }
+// }
