--- a/src/components/hero/animationsExamples/Animation6.module.scss
+++ b/src/components/hero/animationsExamples/Animation6.module.scss
@@ -1,1 +1,117 @@
-@use '../../../__colors.css'
+@use '../../../__colors.css';
+
+.first {
+  .content {
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    transition: background-color 0.4s, color 0.4s;
+    margin-right: 0.8rem;
+  }
+  .arrow-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
+    width: 1.5rem;
+    height: 1.5rem;
+    overflow: hidden;
+  }
+  svg {
+    transition: transform 0.4s;
+    transform: translateX(-2rem);
+  }
+}
+
+.first:hover {
+  .content {
+    background-color: var(--yellow-brand);
+    color: var(--black-brand);
+  }
+  svg {
+    transform: translateX(0);
+  }
+}
+
+.second {
+  position: relative;
+  padding: 1rem 2rem;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    // width: 0;
+    height: 1.2px;
+    background-image: linear-gradient(
+      351deg,
+      transparent 20%,
+      var(--yellow-brand) 52%,
+      transparent 85%
+    );
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: transform 0.4s;
+  }
+  .content {
+    transition: transform 0.6s ease-out;
+  }
+}
+
+.second:hover {
+  &::before {
+    transform: scaleX(1);
+  }
+  .content {
+    transform: scale(1.2);
+  }
+}
+
+.third {
+  .arrow-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 5px;
+    background-color: var(--white);
+    margin-right: 0.5rem;
+    color: var(--black-brand);
+    transition: background-color 0.4s;
+  }
+  svg {
+    width: 50%;
+    transition: transform 0.4s;
+  }
+  .content {
+    position: relative;
+    height: 100%;
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 0px;
+      left: 0;
+      transform-origin: left;
+      height: 1px;
+      width: 100%;
+      transform: scaleX(0);
+      background-color: var(--white);
+      transition: transform 0.4s;
+    }
+  }
+}
+
+.third:hover {
+  .arrow-wrapper {
+    background-color: var(--yellow-brand);
+  }
+  svg {
+    transform: scale(1.2);
+  }
+  .content {
+    &::before {
+      transform: scaleX(1);
+    }
+  }
+}
