--- a/src/components/hero/animationsExamples/Animation7.module.scss
+++ b/src/components/hero/animationsExamples/Animation7.module.scss
@@ -1,1 +1,113 @@
-@use '../../../__colors.css'
+@use '../../../__colors.css';
+
+.first,
+.second,
+.third {
+  padding: 1rem 2rem 1rem 2rem;
+  transition: transform 0.3s;
+  border: 1px solid var(--white-brand);
+}
+
+.first,
+.third {
+  position: relative;
+  overflow: hidden;
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--yellow-brand);
+    z-index: 1;
+    transition: transform 0.25s;
+  }
+  p {
+    display: flex;
+    z-index: 2;
+    transition: color 0.25s;
+  }
+}
+
+.first,
+.second {
+  .arrow-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+}
+
+.first {
+  &::before {
+    transform: translateY(100%);
+  }
+
+  .arrow-circle {
+    margin-left: 1rem;
+    z-index: 2;
+    transition: color 0.25s, translate 0.25s;
+  }
+  .arrow-first {
+    height: 100%;
+    transition: transform 0.3s;
+  }
+}
+
+.first:hover {
+  &::before {
+    transform: translateY(0);
+  }
+  p,
+  .arrow-first {
+    color: var(--black-brand);
+  }
+  .arrow-first {
+    transform: rotate(-45deg);
+  }
+}
+
+.second {
+  .arrow-circle {
+    transform: rotate(-45deg);
+    margin-left: 0.5rem;
+    overflow: hidden;
+  }
+  .arrow-first,
+  .arrow-second {
+    position: absolute;
+    height: 100%;
+    transition: transform 0.3s;
+  }
+  .arrow-first {
+    transform: translateX(-250%);
+  }
+}
+
+.second:hover {
+  .arrow-first {
+    transform: translateX(0%);
+  }
+  .arrow-second {
+    transform: translateX(250%);
+  }
+}
+
+.third {
+  &::before {
+    transform: translateX(-100%);
+  }
+}
+
+.third:hover {
+  &::before {
+    transform: translateX(0%);
+  }
+  p {
+    color: var(--black-brand);
+  }
+}
