--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -1,70 +1,107 @@
 @use '../../__colors.css';
 
 .bgc-img {
+  // display:block;
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
   background-image: url('https://cdn.prod.website-files.com/64ab4ca244ef5156093937b6/65f2d866372c85372dbbb507_BGG.svg');
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  // min-width: 100vw;
+  max-width: 100vw;
   background-position: 100% 0;
-  // background-size: contain;
+  background-size: auto;
   background-repeat: no-repeat;
   overflow-x: clip;
   z-index: -1;
-  .bgc-img__yellow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 5rem;
-    box-shadow: 25px 28px 100px 50px var(--yellow-brand);
-    opacity: 0.1;
-    overflow-x: clip;
-  }
 }
 nav {
   padding: 1rem;
   z-index: 2;
+  max-width: 100vw;
   .nav-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
+
   a {
     text-decoration: none;
     color: var(--white);
   }
   .nav-logo {
-    width: 10rem;
+    width: 100px;
   }
   .nav-menu__all {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
+    margin-left: auto;
+  }
+  .blur {
+    display: flex;
+    align-items: center;
     gap: 1rem;
     border-radius: 100px;
-    .signin {
-      padding: 0.5rem 1rem;
-      border: 1px solid var(--slate-grey);
-      background-color: rgba(41, 42, 43, 0);
-      font-family: Instrumentsans Medium, sans-serif;
-      font-weight: 400;
-      transition: all 0.4s;
-    }
+  }
+  .signin {
+    padding: 5px 10px;
+    border: 1px solid var(--slate-grey);
+    background-color: rgba(41, 42, 43, 0);
+    font-family: Instrumentsans Medium, sans-serif;
+    font-weight: 400;
+    transition: all 0.4s;
+    text-align: center;
+  }
+  .signup {
+    padding: 5px 10px;
+    border: 1px solid var(--dark-blue);
+    background-color: var(--yellow-brand);
+    color: #000;
+    font-weight: 500;
+    font-family: Instrumentsans Medium, sans-serif;
+    transition: all 0.4s;
+    text-align: center;
+  }
+}
+
+@media (min-width: 479px) {
+  .bgc-img {
+    background-position: 0 0;
+  }
+  nav {
+    .signin,
     .signup {
-      padding: 0.5rem 1rem;
-      border: 1px solid var(--dark-blue);
-      background-color: var(--yellow-brand);
-      color: #000;
-      font-weight: 500;
-      font-family: Instrumentsans Medium, sans-serif;
-      transition: all 0.4s;
+      padding: 10px 15px;
     }
   }
 }
 
-@media (min-width:678px){
-  .bgc-img{
+@media (min-width: 678px) {
+  nav {
+    padding: 10px 30px;
+    .one-third {
+      width: 100%;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .bgc-img {
+    background-position: 100% 0;
     background-size: contain;
+  }
+  nav {
+    .blur {
+      backdrop-filter: blur(20px);
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  nav {
+    padding: 10px 40px;
   }
 }
