--- a/src/App.scss
+++ b/src/App.scss
@@ -54,6 +54,14 @@ article {
   margin: 0 auto 3rem auto;
 }
 
+.content-wrapper-section1{
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  min-height: 200px;
+}
+
 .link-button {
   display: flex;
   flex-direction: row;
@@ -66,6 +74,8 @@ article {
   text-decoration: none;
   cursor: pointer;
 }
+
+
 
 .rounded {
   border-radius: 100px;
