--- a/src/components/sections/section1/Section1.module.scss
+++ b/src/components/sections/section1/Section1.module.scss
@@ -5,7 +5,7 @@ section {
   color: var(--black-brand);
   padding: 100px 0;
 
-  p {
+  .under-title-text {
     font-size: 1.6rem;
     text-align: center;
     color: var(--slate-grey);
@@ -26,6 +26,7 @@ section {
     flex-direction: row;
 
     p {
+      color: var(--slate-grey);
       text-align: left;
       font-size: 1.2rem;
       width: 160px;
@@ -82,12 +83,42 @@ section {
       height: 2rem;
     }
   }
+
+  .cards-wrapper {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: row;
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+    grid-template-columns: 1fr;
+    grid-auto-flow: dense;
+    align-items: stretch;
+    width: 100%;
+  }
 }
 
 @media (min-width: 576px) {
   section {
     .first {
       display: flex;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  section {
+    .cards-wrapper {
+      grid-column-gap: 1rem;
+      grid-row-gap: 1rem;
+      grid-template-rows: auto;
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+@media (min-width: 992px) {
+  section {
+    .cards-wrapper {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
 }
