--- a/src/App.scss
+++ b/src/App.scss
@@ -54,8 +54,21 @@ article {
   margin: 0 auto 3rem auto;
 }
 
-.content-wrapper-section1{
-    display: flex;
+.card-title {
+  margin: 0 0 2rem 0;
+  letter-spacing: -1px;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.card-text{
+font-size: 1.4rem;
+font-weight: 500;
+}
+
+.content-wrapper-section1 {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
@@ -74,8 +87,6 @@ article {
   text-decoration: none;
   cursor: pointer;
 }
-
-
 
 .rounded {
   border-radius: 100px;
