--- a/src/components/sections/section1/Section1.module.scss
+++ b/src/components/sections/section1/Section1.module.scss
@@ -1,9 +1,9 @@
 @use '../../../__colors.css';
 
-section {
+.one {
   background-color: var(--bg-white);
   color: var(--black-brand);
-  padding: 100px 0;
+  padding-top: 100px;
 
   .under-title-text {
     font-size: 1.6rem;
@@ -98,7 +98,7 @@ section {
 }
 
 @media (min-width: 576px) {
-  section {
+  .one {
     .first {
       display: flex;
     }
@@ -106,7 +106,7 @@ section {
 }
 
 @media (min-width: 768px) {
-  section {
+  .one {
     .cards-wrapper {
       grid-column-gap: 1rem;
       grid-row-gap: 1rem;
@@ -116,7 +116,7 @@ section {
   }
 }
 @media (min-width: 992px) {
-  section {
+  .one {
     .cards-wrapper {
       grid-template-columns: 1fr 1fr 1fr 1fr;
     }
