--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,8 @@ article {
 
 .container {
   width: 100%;
-  padding: 0 1rem 0 1rem;
+  padding: 0 2rem 0 2rem;
+  max-width: 1380px;
   margin: 0 auto;
 }
 
@@ -54,12 +55,27 @@ article {
   margin: 0 auto 3rem auto;
 }
 
+.section2-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+  // width: 100%;
+  min-height: 500px;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
 .card-title {
-  margin: 0 0 2rem 0;
+  margin: 0 0 2.2rem 0;
   letter-spacing: -1px;
-  font-size: 2.8rem;
+  font-size: 2.2rem;
   font-weight: 600;
   line-height: 1.2;
+}
+
+.card-title-big{
+  font-size: 2.8rem;
 }
 
 .card-text{
@@ -110,36 +126,22 @@ body::-webkit-scrollbar-track {
 
 @media (min-width: 576px) {
   .container {
-    width: 540px;
-    padding: 0 2rem 0 2rem;
+    padding: 0 2.5vw 0 2.5vw;
   }
   .section-title {
     font-size: 3.2rem;
   }
 }
 @media (min-width: 768px) {
-  .container {
-    width: 720px;
-  }
+  
   .section-title {
     font-size: 3.6rem;
   }
 }
 @media (min-width: 992px) {
-  .container {
-    width: 960px;
-  }
+ 
   .section-title {
     font-size: 4.4rem;
   }
 }
-@media (min-width: 1200px) {
-  .container {
-    width: 1140px;
-  }
-}
-@media (min-width: 1400px) {
-  .container {
-    width: 1320px;
-  }
-}
+
