--- a/src/components/sections/section2/parts/YellowCard.module.scss
+++ b/src/components/sections/section2/parts/YellowCard.module.scss
@@ -1,15 +1,9 @@
 @use '../../../../__colors.css';
 
-.box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 30px;
-  width: 100%;
-  min-height: 500px;
-  border-radius: 25px;
+.yellow {
   background-color: var(--yellow-brand);
-  overflow: hidden;
+  color: var(--black-brand);
+  width: 100%;
 
   .text-container {
     max-width: 35rem;
@@ -19,8 +13,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
-    gap: 0.8rem;
-    margin-bottom: 0.8rem;
+    gap: 1rem;
+    margin-bottom: 1rem;
   }
   .buttons-container {
     margin-right: -50px;
@@ -32,18 +26,52 @@
     justify-content: flex-start;
     align-items: center;
     flex-wrap: nowrap;
-    text-wrap: nowrap;
+    // text-wrap: nowrap;
     white-space: nowrap;
     border-radius: 100rem;
     border: 1px solid var(--black-brand);
     background-color: transparent;
     color: var(--black-brand);
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     min-height: 2.5rem;
-    padding: 0.5rem 1rem;
+    padding: 0.8rem;
+    transition: color 0.4s, background-color 0.4s, transform 0.4s;
     svg {
-      width: 20px;
-      height: 20px;
+      width: 24px;
+      height: 24px;
+    }
+  }
+  .normal:hover {
+    color: var(--yellow-brand);
+    background-color: var(--black-brand);
+    transform: scale(1.1);
+  }
+}
+
+@media(min-width:768px){
+    .yellow{
+        .buttons-container{
+            margin-right: -140px;
+        }
+    }
+}
+
+@media (min-width: 992px) {
+  .yellow{
+    width: 75%;
+     .buttons-container {
+    margin-right: 0px;
+  }
+    .normal{
+        font-size: 1.8rem;
+        padding: 1.6rem;
+        // text-wrap: wrap;
+        white-space: wrap;
+
+        svg{
+            width: 32px;
+            height: 32px;
+        }
     }
   }
 }
