wall of love finished

--- a/src/components/sections/section1/cards/Pricing.module.scss
+++ b/src/components/sections/section1/cards/Pricing.module.scss
@@ -9,6 +9,7 @@
   text-decoration: none;
   //   padding-right: 2rem;
   overflow: hidden;
+  cursor: pointer;
   .arrow {
     display: flex;
     align-items: center;
