--- a/src/components/sections/section2/Section2.module.scss
+++ b/src/components/sections/section2/Section2.module.scss
@@ -12,6 +12,10 @@
     gap: 2rem;
     margin-bottom: 2rem;
   }
+  .bottom-cards{
+    
+    overflow: hidden;
+  }
 }
 
 @media (min-width: 768px) {
