--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,8 @@
   padding: 0;
 }
 
+
+
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -45,6 +47,10 @@ article {
   margin: 0 auto;
 }
 
+section {
+  padding: 6rem 0;
+}
+
 .section-title {
   font-size: 3rem;
   font-weight: 500;
@@ -55,7 +61,7 @@ article {
   margin: 0 auto 3rem auto;
 }
 
-.section2-box{
+.section2-box {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -74,13 +80,13 @@ article {
   line-height: 1.2;
 }
 
-.card-title-big{
+.card-title-big {
   font-size: 2.8rem;
 }
 
-.card-text{
-font-size: 1.4rem;
-font-weight: 500;
+.card-text {
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 
 .content-wrapper-section1 {
@@ -133,15 +139,12 @@ body::-webkit-scrollbar-track {
   }
 }
 @media (min-width: 768px) {
-  
   .section-title {
     font-size: 3.6rem;
   }
 }
 @media (min-width: 992px) {
- 
   .section-title {
     font-size: 4.4rem;
   }
 }
-
