--- a/src/components/sections/section1/cards/Next.module.scss
+++ b/src/components/sections/section1/cards/Next.module.scss
@@ -13,6 +13,7 @@
   color: var(--white-brand);
   transition: background-color 0.4s, border-color 0.4s, color 0.4s;
   overflow: hidden;
+  cursor: pointer;
   .text {
     transform: translateY(4rem);
     transition: transform 0.4s;
