--- a/src/components/sections/section1/cards/ReadMore.module.scss
+++ b/src/components/sections/section1/cards/ReadMore.module.scss
@@ -10,6 +10,7 @@
   margin: 0 auto;
   text-decoration: none;
   font-size: 1.6rem;
+  cursor: pointer;
   .left-arrow,
   .right-arrow {
     display: flex;
