--- a/src/components/sections/section2/parts/WhiteCard.module.scss
+++ b/src/components/sections/section2/parts/WhiteCard.module.scss
@@ -1,10 +1,13 @@
 @use '../../../../__colors.css';
 
 .white {
+    position: relative;
   background-color: var(--white);
   color: var(--black);
   border: 1px solid var(--light-bg);
   width: 100%;
+  height: 550px !important;
+  overflow: hidden;
 
   .top-container {
     display: flex;
@@ -17,6 +20,17 @@
   }
   .button-wrapper {
     max-width: 19rem;
+  }
+  .cards-container{
+    position: relative;
+    width: 10px;
+    height: 10px;
+    overflow: hidden;
+  }
+  .light-card{
+    position: absolute;
+    top: -300px;
+    left: 0;
   }
 }
 
