--- a/src/components/sections/section3/Section3.module.scss
+++ b/src/components/sections/section3/Section3.module.scss
@@ -3,6 +3,7 @@
 .three {
   // background-color: var(--black-brand);
   padding-top: 10rem;
+  padding-bottom: 12rem;
   .under-title-text {
     text-align: center;
     font-size: 1.6rem;
