--- a/src/components/hero/animationsExamples/Animation4.module.scss
+++ b/src/components/hero/animationsExamples/Animation4.module.scss
@@ -32,6 +32,9 @@
     max-height: 1rem;
     transition: transform 0.4s;
     transform: translateX(-150%);
+    svg{
+      width: 100%;
+    }
   }
 
   .dot {
