--- a/src/components/sections/section1/cards/Pricing.module.scss
+++ b/src/components/sections/section1/cards/Pricing.module.scss
@@ -18,6 +18,9 @@
     color: var(--white-brand);
     transform: translateX(-2.2rem);
     transition: transform 0.4s;
+     svg{
+      width: 100%;
+    }
   }
   .text {
     font-size: 1.6rem;
