--- a/src/components/hero/animationsExamples/Animation3.module.scss
+++ b/src/components/hero/animationsExamples/Animation3.module.scss
@@ -14,6 +14,7 @@
     transition: transform 0.4s, color 0.2s;
     svg {
       z-index: 3;
+      width: 100%;
     }
   }
 
@@ -25,6 +26,7 @@
     z-index: 1;
     border-radius: 100%;
     transition: width 0.4s, height 0.4s;
+
   }
 }
 
@@ -60,6 +62,9 @@
     max-width: 1.6rem;
     max-height: 1.6rem;
     transition: transform 0.4s;
+    svg{
+      width: 100%;
+    }
   }
   .left-star {
     transform: translateX(-120%);
@@ -80,6 +85,9 @@
     justify-content: center;
     width: 1.4rem;
     transition: transform 0.3s;
+    svg{
+      width: 100%;
+    }
   }
   .left-arrow {
     color: var(--yellow-brand);
