--- a/src/components/hero/animationsExamples/Animation7.module.scss
+++ b/src/components/hero/animationsExamples/Animation7.module.scss
@@ -6,6 +6,9 @@
   padding: 1rem 2rem 1rem 2rem;
   transition: transform 0.3s;
   border: 1px solid var(--white-brand);
+  svg {
+    width: 100%;
+  }
 }
 
 .first,
