--- a/src/components/sections/section2/parts/ImgCard.module.scss
+++ b/src/components/sections/section2/parts/ImgCard.module.scss
@@ -12,39 +12,39 @@
   border-radius: 25px;
   overflow: hidden;
   background-color: var(--black-brand);
+  background-image: url('https://cdn.prod.website-files.com/64ab4ca244ef5156093937b6/65de71ba48e050ce60928fb7_Group%2035451.svg');
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: var(--white);
-  .bgc-img {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('https://cdn.prod.website-files.com/64ab4ca244ef5156093937b6/65de71ba48e050ce60928fb7_Group%2035451.svg');
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    flex-direction: column;
-    justify-content: space-between;
-    z-index: 2;
+  // z-index: 5;
+  .text-container{
+    text-align: center;
+    max-width: 35rem;
+    padding: 0 1rem;
+    margin: 0 auto;
   }
   .yellow-light {
     position: absolute;
     inset: auto 0% 0% auto;
     object-fit: cover;
+    // vertical-align: middle;
     width: 150%;
     max-width: 150%;
     height: 100%;
     display: inline-block;
-    // vertical-align: middle;
+    // -webkit-backdrop-filter: blur(20px);
     filter: blur(20px);
     margin-right: -188px;
     margin-bottom: 16px;
-    z-index: 4;
+    // z-index: 1;
+
+
+
   }
 
   .buttons-container {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -62,7 +62,10 @@
     color: #4f4f50;
     margin: 0.6rem;
     transition: transform 0.4s;
-    z-index: 3;
+    // z-index: 1;
+    svg{
+      width: 100%;
+    }
   }
 }
 
