--- a/src/components/sections/section2/parts/whiteCardComponents/GetStartedBtn.module.scss
+++ b/src/components/sections/section2/parts/whiteCardComponents/GetStartedBtn.module.scss
@@ -37,6 +37,9 @@
     max-height: 1rem;
     transition: transform 0.4s;
     transform: translateX(-150%);
+    svg{
+      width: 100%;
+    }
   }
 
   .dot {
