--- a/src/components/sections/section3/Opinion.module.scss
+++ b/src/components/sections/section3/Opinion.module.scss
@@ -39,4 +39,9 @@
     font-size: 1.6rem;
     color: var(--slate-grey);
   }
+  .watcher{
+    width: 100%;
+    height: 0px;
+    background-color: transparent;
+  }
 }
