--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,6 @@
   padding: 0;
 }
 
-
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -19,11 +18,10 @@ body {
   background-color: var(--black-brand);
   color: var(--white-brand);
   font-family: 'Open Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
   font-size: 1.2rem;
   line-height: 1.5;
-  min-height: 200vh;
-  max-width: 100vw;
-  overflow-x: hidden;
 }
 
 ::selection {
