--- a/src/components/hero/animationsExamples/AnimationsWrapper.module.scss
+++ b/src/components/hero/animationsExamples/AnimationsWrapper.module.scss
@@ -2,7 +2,7 @@
 
 .animations-gradient {
   box-sizing: border-box;
-  max-width: 100vw;
+  width: 100%;
   padding: 0px;
   overflow: hidden;
   mask-image: linear-gradient(
